--- a/GrowthK2S/孵化器/026边-引用.md
+++ b/GrowthK2S/孵化器/026边-引用.md
@@ -2,7 +2,7 @@
 # 引用
 
 ```rs
-def::pub type:T,U this Ti p=[D, R] supset [E] subset [[...]] cite [[元素]]
+def::pub type:T,U p=[D, R] this Ti supset [E] subset [[...]] cite [[元素]]
 ```
 
 关于元素中部分概念的引用，采用：`cite [[E]].A`
