--- a/GrowthK2S/思海/典型数据结构.md
+++ b/GrowthK2S/思海/典型数据结构.md
@@ -10,7 +10,7 @@
 
   - 层次结构：其元素分属于不同的层次，一个上层元素可以关联一个或者下层元素，只从上层到下层，允许跨层。
 
-  - 树形结构：属于层次结构，其特点是在一个树形结构中只有一个嘴上层数据元素，称为根。
+  - 树形结构：属于层次结构，其特点是在一个树形结构中只有一个最上层数据元素，称为根。
 
   - 图：表示数据元素之间的相互联系。
 
