--- a/GrowthK2S/孵化器/000点-创造.md
+++ b/GrowthK2S/孵化器/000点-创造.md
@@ -1,7 +1,7 @@
 ## 创造
 
 ```rs
-def::pub type:Create this p=[D, R]
+def::pub type:Create p=[D, R] this
 ```
 
 自然基础之上，通过人的创造实现。
@@ -52,6 +52,8 @@ def::pub type:Create this p=[D, R]
 ==集合的元素，元素的集合。==
 
 边和点都是元素（变量），元素有自己也有向量对象（边）。元素可以进行基本集合运算（超子集运算）分类依据可以根据不同需要对同一事物归于不同的类别。像数字一样，一切皆为集合中的元素。
+
+抽象-实现、组合、相关，相似、引用、约束、多型、归于、术语、路径
 
 ## 符号定义
 
