--- a/GrowthK2S/孵化器/021边-集合.md
+++ b/GrowthK2S/孵化器/021边-集合.md
@@ -3,9 +3,13 @@
 ## 标题：水（元素 - 基本、继承体现层次）
 
 ```rs
-def::pub type:T,U this Ti p=[D, R] supset [E] subset [B, C, D] 
+def::pub type:T,U p=[D, R] this Ti supset [E] subset [B, C, D] 
 ```
 
 subset可选，仅有包含的意思。supset必选。
 
 扁平的同级元素目前却只能通过筛选看到不能直接且可观的看到。
+
+~idea：最好树形结构根据这个定义自动生成。
+
+对于树形结构，给予层次结构【归于】作为扩展集。
