--- a/GrowthK2S/孵化器/029边-归于.md
+++ b/GrowthK2S/孵化器/029边-归于.md
@@ -1,7 +1,7 @@
 # 归于
 
 ```rs
-def::pub type:T,U this Ti p=[D, R] unto [...]
+def::pub type:T,U p=[D, R] this Ti unto [...]
 ```
 
 专门解决组合来源问题、多继承问题。
