--- a/GrowthK2S/孵化器/000点-创造.md
+++ b/GrowthK2S/孵化器/000点-创造.md
@@ -53,7 +53,9 @@ def::pub type:Create p=[D, R] this
 
 边和点都是元素（变量），元素有自己也有向量对象（边）。元素可以进行基本集合运算（超子集运算）分类依据可以根据不同需要对同一事物归于不同的类别。像数字一样，一切皆为集合中的元素。
 
-抽象-实现、组合、相关，相似、引用、约束、多型、归于、术语、路径
+~边关系：{抽象-实现}、{相关，相似}、引用、{术语、多型}、{集合，归于，约束，组合}、序列（时）
+~点关系：实例、列表、任务、点元素
+
 
 ## 符号定义
 
