--- a/GrowthK2S/孵化器/025边-相似.md
+++ b/GrowthK2S/孵化器/025边-相似.md
@@ -8,7 +8,7 @@ def::pub type:T,U p=[D, R] this Ti approx [...]
 # 相关
 
 ```rs
-def::pub type:T,U p=[D, R] this Ti approx-weak [...]
+def::pub type:T,U p=[D, R] this Ti approx+weak [...]
 ```
 
 弱关系。双向（暂定）
