--- a/GrowthK2S/孵化器/028边-多型.md
+++ b/GrowthK2S/孵化器/028边-多型.md
@@ -1,7 +1,13 @@
 # 多型
 
+○ 形象，象征体系|元素
+
 ```rs
 def::pub type:T,U p=[D, R] this Ti as [E]
+```
+
+```rs
+def::pub type:T,U p=[D, R] this Ti as+alias {E, A}
 ```
 
 as：（用于比较）像…（一样），和…（一样）
@@ -11,3 +17,24 @@ as：（用于比较）像…（一样），和…（一样）
 隐式的多型，其它元素指定它是多型它就是多型，但它也是普通点。
 
 矩阵的归一化
+
+
+#### 多词一义
+
+多词一义是多个词语指向同一个含义。可能的情况有：
+
+中文和外文导致的：“生态”与“ecology”
+对外文的翻译不同：例如把最近上映的电影“Soul”翻译成“心灵奇旅”、“灵魂奇遇记”、“灵魂急转弯”
+不同地方对一个事物的称呼不同：“公交”、“巴士”、“公车”、“客运”
+多词一义的现象在现实生活中处处存在，在obsidian中可以使用别名功能来解决这一问题（请见前几日的推文）。
+
+
+多型或多态性可以是下列意思：
+
+- 多型 (生物学)（polymorphism）：一个物种的同一种群中存在两种或多种明显不同的表型
+- 多态 (计算机科学)（polymorphism）：多态是同一个行为具有多个不同表现形式或形态的能力。多态就是同一个接口，使用不同的实例而执行不同操作。
+- 多型 (结晶学)（polytypism）：一种元素或化合物以两种或两种以上层状结构存在的现象。
+
+化学分子式中：
+- 同素异形体：是相同元素组成,不同形态的单质.如碳元素就有金钢石、石墨、无定形碳等同素异形体.同素异形体由于结构不同,彼此间物理性质有差异
+- 同分异构体：在有机化学中，将分子式相同、结构不同的化合物互称同分异构体，也称为结构异构体。将具有相同分子式而具有不同结构的现象称为同分异构现象。
