--- a/GrowthK2S/孵化器/031边-序列.md
+++ b/GrowthK2S/孵化器/031边-序列.md
@@ -5,7 +5,7 @@ sequence
 ## 生长路径-里程碑（时序）
 
 ```rs
-def::pub type:T,U p=[D, R] this Ti seq_t>>P [...]
+def::pub type:T,U p=[D, R] this Ti seq+t>>P [...]
 ```
 
 链表式结构，当前标注下一个元素。
