--- a/GrowthK2S/孵化器/026边-引用.md
+++ b/GrowthK2S/孵化器/026边-引用.md
@@ -5,10 +5,12 @@
 def::pub type:T,U p=[D, R] this Ti supset [E] subset [[...]] cite [[元素]]
 ```
 
-关于元素中部分概念的引用，采用：`cite [[E]].A`
+关于元素中部分概念的引用，采用：`cite area::[[E]].chunk`
 
 Q：重用文本函数|条目（对于文件内容下，或许一条佳句就是一个条目。）（我该如何处理像名言一样的一个句子然后聚合成的文件，并且重复利用这些句子（条目）呢？），这种重用应该是泛复用。
 
-A：章、节、段 、句：最小可复用文本是单位概念。
+A：定义块为页内最小单位概念构成。
 
 refer
+
+表明具体领域：`cite area::[[E]].chunk`
