--- a/GrowthK2S/孵化器/030边-术语.md
+++ b/GrowthK2S/孵化器/030边-术语.md
@@ -1,7 +1,7 @@
 # 术语
 
 ```rs
-def::pub type:T,U p=[D, R] this Ti term [...]
+def::pub type:T,U p=[D, R] this Ti term [...areas]
 ```
 
 术语使得概念变得简单而不混淆，通用
@@ -12,7 +12,7 @@ def::pub type:? this(一词) p=[D, R] ?:{[多义]}
 
 term 和word 同一个词有不同的解释。属于我确实需要一类边表明它自己的身份多词汇的描述，先把词汇当成语言符号，然后在放到具体语境中。另外多学科使用同一词汇，但文件名只能有一个该如何处理？
 
-使用term标注具体领域，引用时表明领域和term，对于普通word，直接使用word即可。
+使用term标注具体领域（Specific areas），引用时表明领域和term，对于普通word，直接使用word即可。
 
 一个事物的确有多个类别、多方面的解释，比如某个词汇的多学科概念内涵。如何在一个描述中涵盖这些东西？
 
