--- a/GrowthK2S/孵化器/000点-创造.md
+++ b/GrowthK2S/孵化器/000点-创造.md
@@ -10,6 +10,7 @@ def::pub type:Create p=[D, R] this
 
 # 元素
 
+- 主旨：自由与简洁。
 - 始终践行的实用主义是，简单和优雅。（简单意味着更快更好。）
 - 希望元素的概念可以泛化与多样性。它是自由的且具有多样性的结构。
 - 希望它是一个不依赖任何软件，自成长且不断完善的笔记系统。我希望使用数学集合的思维与运算方法。
@@ -18,32 +19,24 @@ def::pub type:Create p=[D, R] this
 - 希望可以具有 强关系 和 弱关系 两种类型。
 - 元素的多样性和关系的多样性。
 
-
-- 网状结构和树状结构。
+- 图结构和树状结构。
 - 检索到任何类别的元素，包括访问权限、深度Depth=1的检索等等。
 - 大概摘要出文件内容与启发性词汇
 - 通过元素与关系，可以演化出丰富性与多样性。
+- 通过这种语义空间表达式和搜索工具（普通或正则）的结合，可以任意检索你想找到的一组相关元素。
 
 
 元素的范围，元素的集合范围，也就是作文围绕论述主题的范围是随自己心去限定的，不过总是有中心，有主干，有枝叶的，就像语言一样。也可以借鉴史记，史记每一篇侧重于某个人物的描画，其它事情略写，但整本史记中所以人物事件斗殴描写的精致，对于整本书来说，每个场景都是完整的
 
-通过这种语义空间表达式和搜索工具（普通或正则）的结合，可以任意检索你想找到的一组相关元素。
-
 元素：不是边界，而是像细胞膜一样的张力弹性与柔韧。可以随意挤压变形，但是还是有一定的限度的。
 
-主旨：自由与简洁。
-
-
-- 深度和广度：继承，  `this supset [...] subset [...]`
-- 组合、抽象，`this complex [...]`
-- 实现：实例， `@this` ，语义概念与实例的映射。语义概念的不断发展。
 
 
 ## 语义空间
 
 > 一种数据结构，对于页来说是一种声明，对于整体来说是一种有序的知识或数据体系。这种数据体系需要用一种配套的结构算法加以约束和管理。
 
-`def::<权限> <修饰符>this as [...] <supset/complex> [...] subset [...] throw [supset, ?sub]`
+`def::<权限> <类型> <优先级> this <edge>`
 
 将计算机科学的变量的结构和数学中集合的定义放在一起，利用数学和计算机技术以及现代学科创建一个结构化工具。
 
@@ -61,12 +54,6 @@ def::pub type:Create p=[D, R] this
 
 ## 符号定义
 
-> 关系成对存在。
-
-### 修饰符
-
-1. `?`：多态。`or`,问号，相同层次元素、同族元素。
-2. `@`：实例。`at`,指向实例对象；
 
 ### 点-关键字
 
