--- a/GrowthK2S/孵化器/011类-实例.md
+++ b/GrowthK2S/孵化器/011类-实例.md
@@ -1,9 +1,11 @@
 
-## 实例
+## 实例（case）
 
 ```rs
-def::pub type:@ p=[D, R] this
+def::pub type:Case p=[D, R] this
 ```
+
+- 实现：实例， `type:Case this` ，语义概念与实例的映射。语义概念的不断发展。
 
 ### 标题：水的升华（元素-实例）
 
