--- a/GrowthK2S/孵化器/031边-序列.md
+++ b/GrowthK2S/孵化器/031边-序列.md
@@ -1,12 +1,17 @@
-# 序列
+# 序列（sequence）
 
-sequence
+
+```rs
+def::pub type:T,U p=[D, R] this Ti seq>>P [...]
+```
 
 ## 生长路径-里程碑（时序）
 
 ```rs
-def::pub type:T,U p=[D, R] this Ti seq+t>>P [...]
+def::pub type:T,U p=[D, R] this Ti seq+time>>P [...]
 ```
+
+一个元素的时间栈。
 
 链表式结构，当前标注下一个元素。
 
