--- a/GrowthK2S/孵化器/000点-创造.md
+++ b/GrowthK2S/孵化器/000点-创造.md
@@ -46,9 +46,9 @@ def::pub type:Create p=[D, R] this
 
 属性包含类型，由属性、边构造元素。由元素构成图。元素可以进行基本集合运算（超子集运算）分类依据可以根据不同需要对同一事物归于不同的类别。像数字一样，一切皆为集合中的元素。
 
-~边关系：{抽象-实现}、{相关+相似}、{{术语-引用}-多型}、{集合，归于，约束，组合}、序列（时）
+~边关系：{抽象-实现}、{相关+相似}、引用、多型、{集合，归于，约束，组合}、序列（时）
 
-~元素类列表：实例、列表、任务、主题、集合
+~元素类列表：实例、列表、任务、主题、集合、术语
 
 
 
