--- a/GrowthK2S/孵化器/000点-创造.md
+++ b/GrowthK2S/孵化器/000点-创造.md
@@ -1,7 +1,7 @@
 ## 创造
 
 ```rs
-def::pub type:Create p=[D, R] this
+#! (ins pub (T i) (attr (type Create) (p (list D R))))
 ```
 
 自然基础之上，通过人的创造实现。
@@ -36,7 +36,7 @@ def::pub type:Create p=[D, R] this
 
 > 一种数据结构，对于页来说是一种声明，对于整体来说是一种有序的知识或数据体系。这种数据体系需要用一种配套的结构算法加以约束和管理。
 
-`def::<权限> <类型> <优先级> this <edge>`
+`(ins <权限> (T i) (attr (type <类型>) (p <优先级>)) (edge <边>))`
 
 将计算机科学的变量的结构和数学中集合的定义放在一起，利用数学和计算机技术以及现代学科创建一个结构化工具。
 
@@ -57,7 +57,7 @@ def::pub type:Create p=[D, R] this
 
 ### 点-关键字
 
-1. `def` 代指定义语义空间。
+1. `ins` 
 2. `<pub><mut>`，权限：公开、可选。
 3. `this` 代指当前文件(元素)
 
@@ -105,3 +105,5 @@ def::pub type:Create p=[D, R] this
 2. 所文档在编写期间，好吧一直是编写期间，只能使用wiki的图片链接，且仅使用最短链接，不可以加入相对路径，防止混乱以及防止增加复杂度。当然你可以发布，发布时可以转换为md链接。
 3. 对于个别必要的图片，可以转换为md链接，比如自述文件。
 4. 小心的使用插件清理掉不用的图片。设置插件清理掉的图片放进ob的回收站。
+
+folder note插件。
