--- a/GrowthK2S/孵化器/027边-约束.md
+++ b/GrowthK2S/孵化器/027边-约束.md
@@ -2,5 +2,5 @@
 
 
 ```rs
-def::pub type:T,U p=[D, R] this Ti throw [supset向上回溯(限定范围)/Any子元素(具体处理)]
+#! (ins pub (T i) (edge (throw (supset向上回溯(限定范围)/Any子元素(具体处理)))))
 ```
