--- a/GrowthK2S/孵化器/030边-序列.md
+++ b/GrowthK2S/孵化器/030边-序列.md
@@ -2,13 +2,13 @@
 
 
 ```rs
-def::pub type:T,U p=[D, R] this Ti seq>>P [...]
+#! (ins pub (T i) (edge (seq>>P (list E F))))
 ```
 
 ## 生长路径-里程碑（时序）
 
 ```rs
-def::pub type:T,U p=[D, R] this Ti seq+time>>P [...]
+#! (ins pub (T i) (edge (seq+time>>P (list E F))))
 ```
 
 一个元素的时间栈。
