--- a/GrowthK2S/孵化器/050表达式.md
+++ b/GrowthK2S/孵化器/050表达式.md
@@ -8,32 +8,22 @@
 
 ## 推导式
 
-- 公式：B ⊂ A = this{B} supset A
-- 解释，元素B包含于元素A 等价于 元素B的父类是元素A。
+- 公式：B ⊂ A = (ins{B} (edge (supset A)))
+- 解释，元素B包含于元素A 等价于 元素B的子集是元素A。
 
-- 公式：存在 this{B，C} supset A = ?this{B} as B supset A OR <?>this{C} as B supset A
-- 解释，B和C的父类是A，等价于 B 和 C 是同一族，同一广度。这意味着基本元素（类）概念唯一。文件有类别，文件可合并，文件可继承，最后映射到实例。
+- 公式：∃ B，C ⊆ A = (ins{B} (edge (supset A))) OR (ins{C} (edge (supset A)))
+- 解释，存在元素B C 被包含于A，等价于 B C 同属于A。这意味着基本元素（类）概念唯一。文件有类别，文件可合并，文件可继承，最后映射到实例。
 
-- 公式：this{C} supset A、B  ≠  this{D} complex A、B
-- 解释：C主要继承元素A，次要继承元素B。等价于 C ⊂ A 或 C ⊂ B 不等价于 元素D由 元素A与元素B 的组合创造的新元素。其中主要的区别是有无创造与创新。即supset ⊂ complex。
+- 公式：(ins{C} (edge (supset A B)))  ≠ (ins{D} (edge (complex A B)))
+- 解释：C主要被包含与元素A，次要被包含与元素B 等价于 C ⊂ A 或 C ⊂ B 不等价于 元素D由 元素A与元素B 的组合创造的新元素。其中主要的区别是有无创造与创新。即supset ⊂ complex。
 
-- 公式：pub this supset =this （解决什么都重要的问题）
-- 解释：表示此元素∈定义基本根元素列表，supset =this，等号意思是赋值。
-
-- 公式：pub <@>this complex [...]  ≠ pub <@>this supset [...]
+- 公式：(ins pub (attr (type Case)) (edge (complex E))) ≠ (ins pub (attr (type Case)) (edge (supset E)))
 - 解释：元素组合后产生的实例 不等价于 元素继承后产生的实例，区别是有无创生。
 
-- 公式：pub <?>this as [....] complex [...] 表示元素组合后产生的多态。
+- 公式：(ins pub (attr (type Case) (p (list D R))) (edge (supset (list A B))))
 
-- 公式：pub <@>this supset [...]
+- 公式：(ins pub (edge (complex E)))
+- 解释：元素组合后产生的元素被标记为[特征元素]。
 
-- 公式：pub this abstract [...]
-
-- 公式：pub <?>this as [....] supset [...]
-
-
-- 公式：pub <?>this complex [...]
-- 解释：元素组合后产生的元素被标记为[[特征元素]]。
-
-- 公式：pub this complex [...] supset [[A]]
+- 公式：(ins pub (edge (complex E) (supset A)))
 - 解释：元素组合后产生的元素继承自元素A。
