--- a/GrowthK2S/孵化器/016类-术语.md
+++ b/GrowthK2S/孵化器/016类-术语.md
@@ -1,7 +1,7 @@
 # 术语
 
 ```rs
-def::pub type:Term+[...areas] p=[D, R] this Ti
+#! (ins pub (T i) (attr (type Term+[...areas]) (p (list D R))))
 ```
 
 术语使得概念变得简单而不混淆，通用
