--- a/GrowthK2S/孵化器/024边-组合.md
+++ b/GrowthK2S/孵化器/024边-组合.md
@@ -1,7 +1,7 @@
 ## 组合（具象）
 
 ```rs
-def::pub type:T,U p=[D, R] this Ti complex [任意元素1，任意元素2]
+#! (ins pub (T i) (edge (complex (list AnyE1 AnyE2))))
 ```
 
 > 标题：碳水化合物（元素&组合）
