--- a/GrowthK2S/孵化器/000点-创造.md
+++ b/GrowthK2S/孵化器/000点-创造.md
@@ -1,7 +1,7 @@
 ## 创造
 
 ```rs
-#! (ins pub (T i) (attr (type Create) (p (list D R))))
+#! (ink pub (T i) (attr (type Create) (p (list D R))))
 ```
 
 自然基础之上，通过人的创造实现。
@@ -36,7 +36,7 @@
 
 > 一种数据结构，对于页来说是一种声明，对于整体来说是一种有序的知识或数据体系。这种数据体系需要用一种配套的结构算法加以约束和管理。
 
-`(ins <权限> (T i) (attr (type <类型>) (p <优先级>)) (edge <边>))`
+`(ink <权限> (T i) (attr (type <类型>) (p <优先级>)) (edge <边>))`
 
 将计算机科学的变量的结构和数学中集合的定义放在一起，利用数学和计算机技术以及现代学科创建一个结构化工具。
 
@@ -57,7 +57,7 @@
 
 ### 点-关键字
 
-1. `ins` 
+1. `ink` 表示墨水、墨汁、油墨、颜料
 2. `<pub><mut>`，权限：公开、可选。
 3. `this` 代指当前文件(元素)
 
