--- a/GrowthK2S/孵化器/010类-主题.md
+++ b/GrowthK2S/孵化器/010类-主题.md
@@ -1,7 +1,7 @@
 # 主题
 
 ```rs
-#! (ins pub (T i) (attr (type Topic) (p (list D R))))
+#! (ink pub (T i) (attr (type Topic) (p (list D R))))
 ```
 
 
