--- a/GrowthK2S/孵化器/014类-集合.md
+++ b/GrowthK2S/孵化器/014类-集合.md
@@ -1,7 +1,7 @@
 ## 集合
 
 ```rs
-#! (ins pub (T i) (attr (type Set) (p (list D R))))
+#! (ink pub (T i) (attr (type Set) (p (list D R))))
 ```
 
 Collection 集合是由一系列元素构成的（ concepts, 或 tasks）。
