--- a/GrowthK2S/孵化器/015类-概念.md
+++ b/GrowthK2S/孵化器/015类-概念.md
@@ -1,5 +1,5 @@
 # Concept 概念
 
 ```rs
-#! (ins pub (T i) (attr (type Concept) (p (list D R))))
+#! (ink pub (T i) (attr (type Concept) (p (list D R))))
 ```
