--- a/GrowthK2S/孵化器/021边-集合.md
+++ b/GrowthK2S/孵化器/021边-集合.md
@@ -3,7 +3,7 @@
 ## 标题：水（元素 - 基本、继承体现层次）
 
 ```rs
-#! (ins pub (T i) (edge (supset E) (subset (list B C D))))
+#! (ink pub (T i) (edge (supset E) (subset (list B C D))))
 ```
 
 - 对于树形结构，给予层次结构【归于】作为扩展集。
