--- a/GrowthK2S/孵化器/025边-相似.md
+++ b/GrowthK2S/孵化器/025边-相似.md
@@ -1,14 +1,14 @@
 # 相似 
 
 ```rs
-#! (ins pub (T i) (edge (approx (list B C))))
+#! (ink pub (T i) (edge (approx (list B C))))
 ```
 
 
 # 相关
 
 ```rs
-#! (ins pub (T i) (edge (approx+weak (list B C))))
+#! (ink pub (T i) (edge (approx+weak (list B C))))
 ```
 
 弱关系。双向（暂定）
