--- a/GrowthK2S/孵化器/026边-引用.md
+++ b/GrowthK2S/孵化器/026边-引用.md
@@ -2,7 +2,7 @@
 # 引用
 
 ```rs
-#! (ins pub (T i) (edge (cite (list B C))))
+#! (ink pub (T i) (edge (cite (list B C))))
 ```
 
 关于元素中部分概念的引用，采用：`cite [Area]/[E].chunk`
