--- a/GrowthK2S/孵化器/050表达式.md
+++ b/GrowthK2S/孵化器/050表达式.md
@@ -8,22 +8,22 @@
 
 ## 推导式
 
-- 公式：B ⊂ A = (ins{B} (edge (supset A)))
+- 公式：B ⊂ A = (ink{B} (edge (supset A)))
 - 解释，元素B包含于元素A 等价于 元素B的子集是元素A。
 
-- 公式：∃ B，C ⊆ A = (ins{B} (edge (supset A))) OR (ins{C} (edge (supset A)))
+- 公式：∃ B，C ⊆ A = (ink{B} (edge (supset A))) OR (ink{C} (edge (supset A)))
 - 解释，存在元素B C 被包含于A，等价于 B C 同属于A。这意味着基本元素（类）概念唯一。文件有类别，文件可合并，文件可继承，最后映射到实例。
 
-- 公式：(ins{C} (edge (supset A B)))  ≠ (ins{D} (edge (complex A B)))
+- 公式：(ink{C} (edge (supset A B)))  ≠ (ink{D} (edge (complex A B)))
 - 解释：C主要被包含与元素A，次要被包含与元素B 等价于 C ⊂ A 或 C ⊂ B 不等价于 元素D由 元素A与元素B 的组合创造的新元素。其中主要的区别是有无创造与创新。即supset ⊂ complex。
 
-- 公式：(ins pub (attr (type Case)) (edge (complex E))) ≠ (ins pub (attr (type Case)) (edge (supset E)))
+- 公式：(ink pub (attr (type Case)) (edge (complex E))) ≠ (ink pub (attr (type Case)) (edge (supset E)))
 - 解释：元素组合后产生的实例 不等价于 元素继承后产生的实例，区别是有无创生。
 
-- 公式：(ins pub (attr (type Case) (p (list D R))) (edge (supset (list A B))))
+- 公式：(ink pub (attr (type Case) (p (list D R))) (edge (supset (list A B))))
 
-- 公式：(ins pub (edge (complex E)))
+- 公式：(ink pub (edge (complex E)))
 - 解释：元素组合后产生的元素被标记为[特征元素]。
 
-- 公式：(ins pub (edge (complex E) (supset A)))
+- 公式：(ink pub (edge (complex E) (supset A)))
 - 解释：元素组合后产生的元素继承自元素A。
