--- a/GrowthK2S/孵化器/011类-实例.md
+++ b/GrowthK2S/孵化器/011类-实例.md
@@ -2,7 +2,7 @@
 ## 实例（case）
 
 ```rs
-#! (ins pub (T i) (attr (type Case) (p (list D R))))
+#! (ink pub (T i) (attr (type Case) (p (list D R))))
 ```
 
 - 实现：实例， `(type Case)` ，语义概念与实例的映射。语义概念的不断发展。
