--- a/GrowthK2S/孵化器/023边-实现.md
+++ b/GrowthK2S/孵化器/023边-实现.md
@@ -1,6 +1,6 @@
 
 ```rs
-#! (ins pub (T i) (edge (impl (list B C D))))
+#! (ink pub (T i) (edge (impl (list B C D))))
 ```
 
 单个类型可以是复合类型、某种抽象的实现后元素。导数的逆过程？
