--- a/GrowthK2S/孵化器/028边-多型.md
+++ b/GrowthK2S/孵化器/028边-多型.md
@@ -3,11 +3,11 @@
 ○ 形象，象征体系|元素
 
 ```rs
-#! (ins pub (T i) (edge (as E)))
+#! (ink pub (T i) (edge (as E)))
 ```
 
 ```rs
-#! (ins pub (T i) (edge (as+alias {E, A})))
+#! (ink pub (T i) (edge (as+alias {E, A})))
 ```
 
 as：（用于比较）像…（一样），和…（一样）
