--- a/GrowthK2S/孵化器/030边-序列.md
+++ b/GrowthK2S/孵化器/030边-序列.md
@@ -2,13 +2,13 @@
 
 
 ```rs
-#! (ins pub (T i) (edge (seq>>P (list E F))))
+#! (ink pub (T i) (edge (seq>>P (list E F))))
 ```
 
 ## 生长路径-里程碑（时序）
 
 ```rs
-#! (ins pub (T i) (edge (seq+time>>P (list E F))))
+#! (ink pub (T i) (edge (seq+time>>P (list E F))))
 ```
 
 一个元素的时间栈。
