--- a/GrowthK2S/孵化器/000点-创造.md
+++ b/GrowthK2S/孵化器/000点-创造.md
@@ -36,7 +36,7 @@
 
 > 一种数据结构，对于页来说是一种声明，对于整体来说是一种有序的知识或数据体系。这种数据体系需要用一种配套的结构算法加以约束和管理。
 
-`(ink <权限> (T i) (attr (type <类型>) (p <优先级>)) (edge <边>))`
+`(ink <权限> (<运算符> i) (attr (type <类型>) (p <优先级>)) (edge <边>))`
 
 将计算机科学的变量的结构和数学中集合的定义放在一起，利用数学和计算机技术以及现代学科创建一个结构化工具。
 
@@ -44,12 +44,15 @@
 
 ==集合的元素，元素的集合。==
 
-属性包含类型，由属性、边构造元素。由元素构成图。元素可以进行基本集合运算（超子集运算）分类依据可以根据不同需要对同一事物归于不同的类别。像数字一样，一切皆为集合中的元素。
+由属性、边构造元素。由元素构成图，元素的可操作性为内容树。元素可以进行基本集合运算（超子集运算）分类依据可以根据不同需要对同一事物归于不同的类别。像数字一样，一切皆为集合中的元素。
 
-~边关系：{抽象-实现}、{相关+相似}、引用、多型、{集合，归于，约束，组合}、序列（时）
+~边关系：{抽象-实现}、{相关+相似}、引用、{层集，归于，约束，组合}、序列（时）、多型
 
 ~元素类列表：实例、列表、任务、主题、集合、术语
 
+~一词多义和一义多词：{术语、多型}
+
+discrete文件夹，存放离散笔记。
 
 
 ## 符号定义
@@ -59,13 +62,12 @@
 
 1. `ink` 表示墨水、墨汁、油墨、颜料
 2. `<pub><mut>`，权限：公开、可选。
-3. `this` 代指当前文件(元素)
 
 
 ### 边-关键字
 
 1. `cite` 代指引用其它元素，引用关系。程序设计中通常会导入程序库来实现某些功能。C/C++语言中使用include导入其它文件以扩展当前文件，分而治之。被引用文件往往和当前文件无任何继承关系。元素和元素之间会相互勾连的，在文学做品里面会用典说明。用典、意象也属于一种引用。特殊：出现在文章中的wiki链接引用。
-2. `as` 代指多态的特征元素，矩阵的归一化。
+2. `as` 代指多型的特征元素，矩阵的归一化。
 3. `supset` 代指超集。
 4. `subset` 代指子集。
 5. `complex` 代指组合、复杂度，组合多个元素形成新的元素。
