--- a/GrowthK2S/示例/概念渐构.md
+++ b/GrowthK2S/示例/概念渐构.md
@@ -1,5 +1,4 @@
-
-def::pub type:List this p=[curr]
+#! (ink pub (attr (type List) (p curr)))
 
 - Purpe kernel（完整的、刚刚出生就有的、纯净的、它是每一个有生命的美好共有的）
 - 我与他（实体与实体）-红色精神
