--- a/GrowthK2S/示例/现代科学.md
+++ b/GrowthK2S/示例/现代科学.md
@@ -1,5 +1,4 @@
-
-def::pub this subset [[形式科学],[[自然科学]],[[社会科学]]
+#! (ink pub (attr (type Topic)) (edge (subset [[形式科学]] [[自然科学]] [[社会科学]])))
 
 # 线代科学
 
