--- a/GrowthK2S/示例/事物的多元要素.md
+++ b/GrowthK2S/示例/事物的多元要素.md
@@ -1,3 +1,4 @@
-def::pub this subset [[意义]]，[[结构与功能]]
+#! (ink pub (attr (type Topic)) (edge (subset [[意义]]) (unto [[结构与功能]] [[认知科学]])))
+
 
 事物有特征，属性，关系，性质，分类，功能、意义、产生方式、历史背景、发展趋势、形式和结构，结构与功能，视角和主体性，用途与价值，界限和联系，环境和影响
