--- a/GrowthK2S/孵化器/024边-时序.md
+++ b/GrowthK2S/孵化器/024边-时序.md
@@ -2,13 +2,13 @@
 
 
 ```rs
-#! (ink pub (T i) (edge (seq>>P (list E F))))
+#! (ink pub (T i) (edge (seq>>(list E F))))
 ```
 
-## 生长路径-里程碑（时序）
+## 时序（生长路径-里程碑）
 
 ```rs
-#! (ink pub (T i) (edge (seq+time>>P (list E F))))
+#! (ink pub (T i) (edge (seq+time>>E)))
 ```
 
 一个元素的时间栈。
