--- a/GrowthK2S/孵化器/025边-同义.md
+++ b/GrowthK2S/孵化器/025边-同义.md
@@ -1,4 +1,4 @@
-# 多型
+# 同义
 
 ○ 形象，象征体系|元素
 
@@ -12,12 +12,9 @@
 
 as：（用于比较）像…（一样），和…（一样）
 
-去重
+去重、矩阵的归一化
 
-隐式的多型，其它元素指定它是多型它就是多型，但它也是普通点。
-
-矩阵的归一化
-
+隐式的同义，其它元素指定它是同义它就是其它元素的同义。
 
 #### 多词一义
 
