--- a/GrowthK2S/孵化器/000点-创造.md
+++ b/GrowthK2S/孵化器/000点-创造.md
@@ -46,13 +46,15 @@
 
 由属性、边构造元素。由元素构成图，元素的可操作性为内容树。元素可以进行基本集合运算（超子集运算）分类依据可以根据不同需要对同一事物归于不同的类别。像数字一样，一切皆为集合中的元素。
 
-~边关系：{抽象-实现}、{相关+相似}、引用、{层集，归于，约束，组合}、序列（时）、多型
+==边，即两个元素之间的关系。==
 
-~元素类列表：实例、列表、任务、主题、集合、术语
+~边关系：{归于，层集，约束，引用，时序、同义+别名}、{抽象-实现，组合}、{相关+相似}
 
-~一词多义和一义多词：{术语、多型}
+~元素类：集合、概念、主题、实例、列表、任务、术语
 
-discrete文件夹，存放离散笔记。
+~一词多义和一义多词：{术语、同义+别名}
+
+DiscreteNote文件夹，存放离散笔记。
 
 
 ## 符号定义
