--- a/GrowthK2S/孵化器/016类-术语.md
+++ b/GrowthK2S/孵化器/016类-术语.md
@@ -1,14 +1,10 @@
 # 术语
 
 ```rs
-#! (ink pub (T i) (attr (type Term+[...areas]) (p (list D R))))
+#! (ink pub (T i) (attr (type Term+[areas]) (p (list D R))))
 ```
 
-术语使得概念变得简单而不混淆，通用
-
-如果对某个词赋予太多意义就很容易使沟通变得困难且难以理解
-
-def::pub type:? this(一词) p=[D, R] ?:{[多义]}
+术语使得概念变得简单而不混淆，通用。指定语词的哪一个具体含义。如果对某个词赋予太多意义就很容易使沟通变得困难且难以理解
 
 term 和word 同一个词有不同的解释。属于我确实需要一类边表明它自己的身份多词汇的描述，先把词汇当成语言符号，然后在放到具体语境中。另外多学科使用同一词汇，但文件名只能有一个该如何处理？
 
