--- a/GrowthK2S/孵化器/050表达式.md
+++ b/GrowthK2S/孵化器/050表达式.md
@@ -2,9 +2,17 @@
 
 ## 检索式
 
-- 描述：查找同层元素。
-- 公式：this supset [[...]]
+- 描述：查找pub权限的元素。
+- 公式：\(ink pub.*\)
 
+- 描述：检索supset
+- 公式：\(supset (\[\[.*?\]\].*?)\)
+
+- 描述：检索优先级
+- 公式：#!(.*?)\(p .*?\)
+
+- 描述：检索元素主题
+- 公式：(type Topic)
 
 ## 推导式
 
