--- a/GrowthK2S/孵化器/000点-创造.md
+++ b/GrowthK2S/孵化器/000点-创造.md
@@ -48,14 +48,48 @@
 
 ==边，即两个元素之间的关系。==
 
-~边关系：{归于，层集，约束，引用，时序、同义+别名}、{抽象-实现，组合}、{相关+相似}
+~边关系：{{归于-层集-约束}-{引用-时序-同义+别名}}、{抽象-实现，组合-分解}、{相仅：相似+相反}
 
-~元素类：集合、概念、主题、实例、列表、任务、术语
+~元素类：{集合、概念、主题}、实例、列表、任务、术语
 
 ~一词多义和一义多词：{术语、同义+别名}
 
 DiscreteNote文件夹，存放离散笔记。
 
+
+## 元素的语义操作：组合、分解、等价、换算。
+
+add 、minus、times、divide
+
+A M T D
+
+```clojure
+;括弧中第一个符号为运算符，后面是操作数。运算也可以嵌套，比如 
+
+(* (+ 2 3) 6) 
+
+;表示先计算2+3=5，然后再5*6=30。
+
+(+ 2 (* 3 4) (- 3 5)) = 12
+
+;表示先计算 3*4=12，3-5=-2，然后在计算 2+12-2=12。
+```
+
+Q：结果是什么？存放在哪里？而且和组合和分解重合了。分解和组合的结果是this元素。而这个，是对元素级别的复杂运算，其结果是一个新的主题。问题是出现在声明中是什么意义？
+1. 出现在声明中只能意味着，Topic主题经过一系列运算得到这个结果。
+2. 另一种可能是，只有过程，没有结果，仅仅对当前的元素进行操作，结果是需要现进行计算后得到的。
+3. 如果第一种的话，和边-组合分解有什么区别？我觉得边是表示元素之间的关系，而语义运算是得到结果。但需要注意的是边-组合分解得到的结果是this，而语义运算得到的结果也是this，会出现冲突，也许需要采取两种方案，即第一种方案边和语义运算互斥，只能选其一。第二种方案，定义运算优先级。
+4. 如果是第二种的话，则不需要考虑冲突，因为是根据结果在进行语义运算。只是结果是不保存，需要在用的时候运算一下。
+所以你会采用那种方案呢？
+
+this = meld (list AnyE1 AnyE2 AnyE2)
+自强不息 + 逆来顺受 = 能屈能伸。
+
+重大误解 = 错误判断 + （来源）自己形成的重大误解错误判断；
+
+欺诈 = 错误判断 + （来源）对方欺诈行为。
+
+推导过程和结果一样重要！
 
 ## 符号定义
 
