--- a/GrowthK2S/孵化器/028边-组合.md
+++ b/GrowthK2S/孵化器/028边-组合.md
@@ -1,8 +1,10 @@
 ## 组合（具象）
 
 ```rs
-#! (ink pub (T i) (edge (complex (list AnyE1 AnyE2))))
+#! (ink pub (T i) (edge (meld (list AnyE1 AnyE2 AnyE2))))
 ```
+
+this = meld (list AnyE1 AnyE2 AnyE2)
 
 > 标题：碳水化合物（元素&组合）
 
@@ -10,9 +12,13 @@ Composition > Inheritance
 
 组合。与，连接组合元素；
 
-正如继承关系，组合关系有了complex关键字就不需要在this前加&修饰符了
+meld：（是 combine 与 blend 两个单词的意思的综合） 结合或融合 【尤其指是以愉快或有用的方式】
 
 code Aesthetic
 
 
 具象 组合 combine。
+
+自强不息 + 逆来顺受 = 能屈能伸。
+
+将心比心，汉语成语，拼音：jiāng xīn bǐ xīn，意思是设身处地地为别人着想。出自南宋朱熹《朱子语类·大学三》。
