--- a/GrowthK2S/孵化器/022边-约束.md
+++ b/GrowthK2S/孵化器/022边-约束.md
@@ -2,5 +2,7 @@
 
 
 ```rs
-#! (ink pub (T i) (edge (throw (supset向上回溯(限定范围)/Any子元素(具体处理)))))
+#! (ink pub (T i) (edge (throw supset(向上回溯，限定范围) subset(具体处理))))
 ```
+
+this throw [supset, subset]
