--- a/GrowthK2S/孵化器/057匿名页.md
+++ b/GrowthK2S/孵化器/057匿名页.md
@@ -6,9 +6,9 @@
 
 对于某些内容，不可能立即有名字，可能一直没有名字，因为它只是某个类别或元素的读书笔记，还可能涉及多个元素。比如某句话同时涉及价值观和判断力。
 
-无标题笔记，即匿名笔记，可以放在结构中，或者作为某事物的组成或者附属部分。
+**无标题笔记，即匿名笔记，可以放在结构体系中，或者作为某事物的组成或者附属部分。**
 
-1. 结构中，就像每日笔记，存放在时间中。
+1. 结构体系中，就像每日笔记，存放在时间中。
 2. 作为某事物的组成或者附属部分，比如注释。作为具体的内容的附属存在，比如一本书的边注。
 3. 另一种存储形式，白板
 
