--- a/GrowthK2S/孵化器/021边-层集.md
+++ b/GrowthK2S/孵化器/021边-层集.md
@@ -6,6 +6,8 @@
 #! (ink pub (T i) (edge (supset E) (subset (list B C D))))
 ```
 
+树 = 层级列表
+
 - 对于树形结构，给予层次结构【归于】作为扩展集。
 - subset可选，仅有包含的意思。supset必选。
 
