--- a/GrowthK2S/孵化器/013类-映射.md
+++ b/GrowthK2S/孵化器/013类-映射.md
@@ -26,6 +26,8 @@
 
 ## Graph
 
+索引的两种形式 Graph、Moc：要有实际的图，可以看见的的图，也要有承载内容的点，以及点上的边。mermaid，graphviz
+
 ```rs
 #! (ink pub (T i) (attr (type Mapping:Graph) (p (list D R))))
 ```
@@ -60,6 +62,11 @@ style B fill:#F0FF;
 #! (ink pub (T i) (attr (type Mapping:Moc) (p (list D R))))
 ```
 
+在 MOC（内容地图）中按邻近性进行组织。
+
+问：MOC 与 TOC（目录）相比如何？
+
+答：MOC 是流动的，而 TOC 是刚性的。这是设计使然。目录用于组装特定的线性顺序。MOC 的用途要广泛得多。通常，当项目开始完成时，MOC 可能会演变成 TOC。
 ### MOC Mermiad
 
 - Mermaid 概述
