--- a/GrowthK2S/孵化器/013类-映射.md
+++ b/GrowthK2S/孵化器/013类-映射.md
@@ -15,13 +15,19 @@
 > 实例需要引用cite [元素]嘛？或许不需要把，因为程序在正常运行期已经包含所有依赖项。所以不需要cite。cite仅在多态、基本、组合中使用。
 
 
-## 列表
+## 列表 = 序列 = 清单 = 有序集合
+
+<!-- 把时间当作朋友 -->
 
 ```rs
 #! (ink pub (T i) (attr (type Mapping:List) (p (list D R))))
 ```
 
 优先级列表、难度列表、时间列表。有序列表。角度也许是从这些有序或者无序集合中说的。
+
+任务清单、项目清单
+
+项目、领域
 
 
 ## Graph
