add  数学性质：实践论

--- a/GrowthK2S/示例/数学.md
+++ b/GrowthK2S/示例/数学.md
@@ -21,3 +21,27 @@
 
 
 在数学中，"性质"通常指的是一个数学对象或者一种数学结构所具有的特征或者属性。例如，一个函数的性质可能包括它的奇偶性、单调性、最大值和最小值等等。而"定理"则是对某一类数学对象或者数学结构所具有的性质进行严格的证明和描述。换句话说，定理是通过严格的证明得出的结论，具有普遍的适用性和可靠性。性质和定理都是数学中重要的概念，它们帮助我们更好地理解和描述数学对象和结构。[思考]
+
+
+## 什么是性质？
+
+> 定义：描述一个概念，并区别于其它相关概念的表述。它是在不改变目标事物本身的前提下，对概念的内涵或语词的意义所做的简要而准确的描述。
+
+> 性质：从客观角度认识事物的形式，事物本身所具有的与其他事物不同的根本属性。性质是指从数学概念直接推导得出的运算法则或者运算公式等延伸的知识。
+
+> 判定：多用于数学的证明概念，通过事物的本质属性反映出的本质性质，以此作为依据推知下一步结论，这个行为叫判定。
+
+![[Pasted image 20240122200651.png]]
+
+实践论中认识的过程。
+
+1. 定义：对象为未知事物，眼睛看到的特征 + 取名。（存在于比较肤浅的阶段，所能描绘出来的，即实践论中的对某未知事物的感性认知的阶段）
+2. 性质：深入了解，所命名事物名字为苹果。
+	1. 光滑、光泽
+	2. 甜
+	3. 苹果是甜的。
+3. 判定
+	1. 甜的，红色的是苹果。
+4. 性质与判定的区别
+	1. 性质是我知道，我要研究的这个，是什么东西，我要一开始把名字给说出来，在说他具有的特征属性功能等等。
+	2. 判定是，你去跟一个不知道你丢了什么的人，你要先告诉他，你丢的这个东西的特征属性功能，然后再告诉他你丢的这个东西叫什么名，因为一开始他可能不知道。
