--- a/GrowthK2S/示例/数学.md
+++ b/GrowthK2S/示例/数学.md
@@ -45,3 +45,55 @@
 4. 性质与判定的区别
 	1. 性质是我知道，我要研究的这个，是什么东西，我要一开始把名字给说出来，在说他具有的特征属性功能等等。
 	2. 判定是，你去跟一个不知道你丢了什么的人，你要先告诉他，你丢的这个东西的特征属性功能，然后再告诉他你丢的这个东西叫什么名，因为一开始他可能不知道。
+
+
+## 定理，定律，公理
+
+### 1、概念：
+- 定理是经过受逻辑限制的证明为真的陈述。
+- 定律是对客观事实的一种表达形式，通过大量具体的客观事实归纳而成的结论。
+- 公理是指依据人类理性的不证自明的基本事实，经过人类长期反复实践的考验，不需要再加证明的基本命题。
+### 2、区别：
+- 定律是描述客观世界变化规律的表达式或者文字。
+- 公理是不需要认证的，是大家公认的，可以直接拿来用的。
+- 定理是需要证明它是对的，才可以拿来用的。
+
+### 3、公理
+经过人类长期反复的实践检验是真实的，大家普遍公认的、不需要由其他判断加以证明、且也不能由其他判断证明的命题和原理。一些学科就是建立在这样一些公理的基础上。
+
+- 公理1：任意一点到另外任意一点可以画直线。
+- 公理2：一条有限线段可以继续延长。
+- 公理3：以任意点为心及任意的距离可以画圆。
+- 公理4：凡直角都彼此相等。
+- 公理5：同平面内一条直线和另外两条直线相交，若在某一侧的两个内角和小于二直角的和，则这二直线经无限延长后在这一侧相交。
+
+如传统形式逻辑三段论关于一类事物的全部是什么或不是什么，那么这类事物中的部分也是什么或不是什么，也即如果对一类事物的全部有所断定，那么对它的部分也就有所断定，便是公理。
+
+但是，这并不说明公理一定是对的，人类对世界的认知是有限的，这种普遍公认的，不证自明的公理有出错的可能。出错不见得是坏事，反而推动人类一步一步更完善的认识世界。比如关于欧里几何第五公理，不能说是出错，但通过不同的假设就得出几种其它几何——椭圆几何、欧几里得几何和双曲几何。
+
+所以可以得知的结论是这个基础并不是牢不可破的，只是在人类的认知系统内相对正确的
+
+### 4、定理
+已经证明具有正确性、可以作为原则或规律的命题或公式，如几何定理。定理是从真命题（公理或其他已被证明的定理）出发，经过受逻辑限制的演绎推导，证明为正确的结论，即另一个真命题。例如“平行四边形的对边相等”就是平面几何中的一个定理。
+
+一般来说，在数学中，只有重要或有趣的陈述才叫定理。证明定理是数学的中心活动。
+
+相信为真但未被证明的数学叙述为猜想，当它被证明为真后便是定理。它是定理的来源，但并非唯一来源。一个从其他定理引伸出来的数学叙述，可以不经过证明成为猜想的过程，成为定理。
+
+即定理是由公理或定理推导而来的命题或公式。推导方法依靠人类的逻辑学。
+
+### 5、定律
+定律是为实践和事实所证明，反映事物在一定条件下发展变化的客观规律的论断，是通过大量具体的客观事实经验累积归纳而成的结论。例如牛顿运动定律、能量守恒定律、欧姆定律等。
+
+定律是一种理论模型，它用以描述特定情况、特定尺度下的现实世界，在其它尺度下可能会失效或者不准确。没有任何一种理论可以描述宇宙当中的所有情况，也没有任何一种理论可能完全正确。
+
+简而言之，定律是人们通过猜想验证、通过无数次实践证明的，以特殊推导一般，以局部推导全局的的论断。很多科学与哲学的发展即基于此。
+
+我想指出的是定律的局限性。它是有穷情况下对事物的归纳假设，不是必然正确的，当然也不可能穷尽所有情况。
+
+所以可以得知人类认知系统的三个可能错误的来源：一是实践总结出来的定律不够全面，没有囊括所有情况。二是这些不证自明的公理基础。三是用来判断推导的逻辑学。（当然这个可以包括在一二条中。）
+
+我觉得人类至今对世界的认识还只是一小部分，而且已经认知的部分看起来还这么的脆弱。但是我是一个乐观派，我相信世界的可知性，也相信总有一天人类会认知这个世界的一切，更希望能在自己的有生之年能够看到这一切的统一。
+
+发布于 2019-09-17
+From < https://zhuanlan.zhihu.com/p/82920925> 
