--- a/GrowthK2S/孵化器/000点-创造.md
+++ b/GrowthK2S/孵化器/000点-创造.md
@@ -48,6 +48,8 @@
 
 ==边，即两个元素之间的关系。==
 
+边是有方向的，且为单向声明，由当前文件指向被引用文件。
+
 ~边关系：{{归于-层集-约束}-{引用-时序-同义+别名}}、{抽象-实现，组合-分解}、{相仅：相似+相反}
 
 ~元素类：{集合、概念、主题}、实例、列表、任务、术语
