--- a/GrowthK2S/施工中.md
+++ b/GrowthK2S/施工中.md
@@ -23,6 +23,8 @@ ok, 文内上下文的最佳实践方式是双链。
 
 ### TODO 待办
 
+现在看来，必然需要一个按照时间排列的线性笔记，与一个按照类别分布的主题笔记
+
 关于程序中的套娃-封装的实现。目前只对点进行封装，但点和点之间也可以封装成为新的点。
 
 <!-- 总的来说，是对页面在点集中相对位置类型和关系的描述，适当弃用关系对的描述，选择通过反链查看关联-->
