--- a/GrowthK2S/孵化器/000点-创造.md
+++ b/GrowthK2S/孵化器/000点-创造.md
@@ -48,7 +48,7 @@
 
 ==边，即两个元素之间的关系。==
 
-边是有方向的，且为单向声明，由当前文件指向被引用文件。
+边是有方向的，且为单向声明，根据语义可以分成，由当前文件指向被引用文件、由引用文件指向当前文件。
 
 ~边关系：{{归于-层集-约束}-{引用-时序-同义+别名}}、{抽象-实现，组合-分解}、{相仅：相似+相反}
 
