--- a/GrowthK2S/孵化器/024边-时序.md
+++ b/GrowthK2S/孵化器/024边-时序.md
@@ -1,9 +1,12 @@
 # 序列（sequence）
 
-
+## 元素历史
 ```rs
-#! (ink pub (T i) (edge (seq>>(list E F))))
+#! (ink pub (T i) (edge (seq+hist>>(list E F))))
 ```
+
+hist:英文全称 history
+
 
 ## 时序（生长路径-里程碑）
 
@@ -11,7 +14,7 @@
 #! (ink pub (T i) (edge (seq+time>>E)))
 ```
 
-一个元素的时间栈。
+一个元素的时间栈。类似GitHub的release和tag
 
 链表式结构，当前标注下一个元素。
 
