--- a/GrowthK2S/孵化器/028边-组合.md
+++ b/GrowthK2S/孵化器/028边-组合.md
@@ -1,4 +1,4 @@
-## 组合（具象）
+## 组合（傅里叶变换、具象）
 
 ```rs
 #! (ink pub (T i) (edge (meld (list AnyE1 AnyE2 AnyE2))))
@@ -6,11 +6,10 @@
 
 this = meld (list AnyE1 AnyE2 AnyE2)
 
-> 标题：碳水化合物（元素&组合）
 
 Composition > Inheritance
 
-组合。与，连接组合元素；
+组合。与，连接组合元素；例如：碳水化合物（元素的组合）
 
 meld：（是 combine 与 blend 两个单词的意思的综合） 结合或融合 【尤其指是以愉快或有用的方式】
 
