--- a/GrowthK2S/思海/逻辑学的六种关系.md
+++ b/GrowthK2S/思海/逻辑学的六种关系.md
@@ -1,4 +1,4 @@
-## \-01-同一关系
+## 01-同一关系
 
 概念与概念之间的同一关系，说的是两个概念的外延是完全相等的。如图-1所示：
 
@@ -12,7 +12,7 @@
 
 这里我们应该理解，凡是存在着同一关系的两个概念，在我们思维时可以将它们相互替换，而替换的结果并不违反同一律，因为它们是对同一对象的不同角度的反映。比如说“深圳”，则指的是具体的一座城市，换做了“中国第一个经济特区”后，则指的是深圳这座城市的区域定位。
 
-## \-02-从属关系
+## 02-从属关系
 
 概念与概念之间的从属关系，说的是两个概念的外延有大小之分，且一个包含另一个。如图-2所示：
 
@@ -26,7 +26,7 @@
 
 对于处在从属关系下的概念，在逻辑常识中我们有专门的术语：凡是处于B圆代表的位置的，称作“种概念”；处于A圆代表的位置的，称作“属概念”。好比在“华为手机”和“手机”这组概念中，“华为手机”是属概念，而“手机”就是它的种概念。当然，我们也得注意，一个概念在此处为种概念，在别处可能为属概念；或者在此处为属概念，在别处可能为种概念。比如“华为手机”在前面说的是属概念，当它与“华为 P40”处在一块时，就成了种概念了；同样的“手机”和“电子产品”处在一块时，就成了属概念了。
 
-## \-03-并列关系
+## 03-并列关系
 
 概念与概念之间的并列关系，说的是两个概念各自有各自的外延，互补包含，且共同处在一个种概念之中。如图-3所示：
 
@@ -40,7 +40,7 @@
 
 这也提醒我们一点：如果两个概念没有共同的种概念，那就不可能有并列关系。好比“华为手机”和“宠物猫”这两个概念就不能称之为并列关系。
 
-## \-04-相交关系
+## 04-相交关系
 
 概念与概念之间的相交关系，说的是两个概念之间有一部分外延是相同的。如图-4所示：
 
@@ -52,7 +52,7 @@
 
 同时，我们也能看到，处于相交关系下的两个概念，它们有一部分内涵是共同的。比如“iPad”和“iPhone”，都是“有苹果公司设计研发”的电子产品；“艺术品”和“装饰品”，都是“可陈列展示”的物品。
 
-## \-05-矛盾关系
+## 05-矛盾关系
 
 概念与概念之间的矛盾关系，说的是两个概念的外延互补包含、也不相交，但它们两个概念的外延之和等于它们的种概念。如图-5所示：
 
@@ -66,7 +66,7 @@
 
 另外从内涵方面来看，一对矛盾概念，其中一个有确定的属性，如“爱”、“是”；另一个除否定这种属性外，却没有什么确定的属性被肯定下来，只是对立的指出“不爱”、“不是”等“非”的属性。你说我“好”，我说我“不好”，这样对立着。
 
-## \-06-反对关系
+## 06-反对关系
 
 概念与概念之间的反对关系，说的是两个概念的外延处在同一种概念的两端。除此而外，这个种概念还有其他外延。如图-6所示：
 
