--- a/GrowthK2S/孵化器/023边-引用.md
+++ b/GrowthK2S/孵化器/023边-引用.md
@@ -1,5 +1,5 @@
 
-# 引用
+# 引用（refer）
 
 ```rs
 #! (ink pub (T i) (edge (cite (list B C))))
@@ -7,10 +7,8 @@
 
 关于元素中部分概念的引用，采用：`cite [Area]/[E].chunk`
 
+表明具体领域：`cite [Area]/[E].chunk`
+
 Q：重用文本函数|条目（对于文件内容下，或许一条佳句就是一个条目。）（我该如何处理像名言一样的一个句子然后聚合成的文件，并且重复利用这些句子（条目）呢？），这种重用应该是泛复用。
 
 A：定义块为页内最小单位概念构成。
-
-refer
-
-表明具体领域：`cite [Area]/[E].chunk`
