--- a/GrowthK2S/孵化器/029边-分解.md
+++ b/GrowthK2S/孵化器/029边-分解.md
@@ -1,5 +1,9 @@
-# 分解
+# 分解（傅里叶变换）
 
 disintegrate -> disint.
 
-this  = (disint (list A B))
+```rs
+#! (ink pub (T i) (edge (disint (list A B))))
+```
+
+表示当前元素被分解为元素A和元素B。
