--- a/GrowthK2S/孵化器/002ID.md
+++ b/GrowthK2S/孵化器/002ID.md
@@ -1,23 +1,23 @@
 为了使不断加入的卡片形成图谱结构和树结构便于快速检索，同时为了关于部分想法不用命名的便利性，特此建立唯一编码系统。
 
-此ID树是无关概念层级（分类）的生成树。
+此ID树是无关概念层级（分类）想法（写作和思考）的生成树。卡片盒笔记系统就是由想法组成的想法之网(web of thought)。
 
 根据ZK-2：
 
-1. 节点之间根据编码确定的关系 和 节点的内容的概念层级，他俩是没有关系的。
-2. 卡片编码更多是表示虚拟物理地址，是位置关联和接近性。
-3. 编码数字和字母交替出现。
-4. 若有斜杠，斜杠前是事前规划好的。斜杠后是事后生长出来的。
-5. 同一位置分支，由字母或数字表示。
-6. ID后可以加上名字。
+1. 编码数字和字母交替出现。
+2. 若有斜杠，斜杠前是事前规划好的。斜杠后是事后生长出来的。
+3. ID后可以加上名字。
+4. 同一位置分支，由字母或数字表示。
+5. 节点之间根据编码确定的关系 和 节点的内容的概念层级，他俩是没有关系的。
+6. 卡片编码更多是表示虚拟物理地址，是位置关联和接近性。
 
+```
 1 -> 1a -> 1a1
-
 扩充笔记，纵深发展，新建分支。
 
 1 -> 2 ; 1a -> 1b
-
 继续一个思路，并行发展，符号递增。
+```
 
 树的生长{增加分支、增加层次深度}，树是由粗到细。
 
@@ -34,3 +34,5 @@
 **新写的位置，取决于你第一时间是因为哪个节点得到了这个新概念。**
 
 事实上，人类探索和发现新知识的真实过程就是这样的，而不是像教材上安排得那样明明白白。教材、以及任何一种外部资料的清晰结构是没有办法直接整个嵌入大脑的。
+
+https://zhuanlan.zhihu.com/p/336706087?utm_id=0
