--- a/GrowthK2S/孵化器/002ID.md
+++ b/GrowthK2S/孵化器/002ID.md
@@ -1,6 +1,8 @@
 为了使不断加入的卡片形成图谱结构和树结构便于快速检索，同时为了关于部分想法不用命名的便利性，特此建立唯一编码系统。
 
-此ID树是无关概念层级（分类）想法（写作和思考）的生成树。卡片盒笔记系统就是由想法组成的想法之网(web of thought)。
+此ID树是无关概念层级（分类）**想法（写作和思考）的生成树**。卡片盒笔记系统就是由想法组成的想法之网(web of thought)。
+
+> 用树写想法，这些想法被放在固定位置，有时候脑海中会闪现出树中某个节点，那么，你用链接把他们连接起来即可。
 
 根据ZK-2：
 
