--- a/GrowthK2S/孵化器/061笔记的数据结构.md
+++ b/GrowthK2S/孵化器/061笔记的数据结构.md
@@ -31,6 +31,8 @@
 ## 笔记的展开
 
 > 类似树结构的层层递进，“可视面积”保持不变，在面积中存在树结构的任意节点。
+> 
+> 对于集合中的元素来说，是否要展开扩充，使元素展开面积沾满可视面积成为新的集合。
 
 注意力或者工作记忆始终有一个极限范围，lim(N) = 7，所以需要从初始范围例如7开始，不断在lim(N)的范围下不断展开，深化。
 
