--- a/GrowthK2S/思海/综述文件.md
+++ b/GrowthK2S/思海/综述文件.md
@@ -6,6 +6,8 @@
 
 ## GrowthK2S：树图知识结构空间
 
+知识 映射到 生长结构
+
 > 专注于内容，不拘泥于工具。我的一个小玩具。应用数学、逻辑、程序设计思想等等构建一个笔记结构空间。
 >
 > 任何笔记系统，似乎都有一个共同的目标，减熵、降低混乱度、有序和各种结构化，表现为利于快速查找和使用。
