--- a/GrowthK2S/孵化器/061笔记的数据结构.md
+++ b/GrowthK2S/孵化器/061笔记的数据结构.md
@@ -1,3 +1,13 @@
+# 笔记的数据结构
+
+此结构是一种为了实现：将单条笔记放入结构体系中，可以快速检索到它的解决方案。检索和结构密切相关。同时也是为了增加其它的功能，比如笔记之间的边关系的处理等等。然后也逐渐认识笔记的本质是什么——辅助记忆和学习的工具。是我对PKM知识的不断实践、认知和发展的过程。
+
+ZK2的编码，若有内容树一般的树形文件结构（无文件夹），则可以使用内容树实现。无需特定规则编码，直接使用任意ID即可。
+
+数据结构中树的定义，以及树的表现形式。zk的编码想法生成树、文档树、大纲、treenode表格软件，都可视作树结构的一种表现形式。
+
+编码可能没有必要，而忽略为树赋予概念层级、分类，转而改变观念，让想法（写作和思考）去生成树（类似思维导图）重要。一种是框架的集合，一种是无限发散的具有生命力的无限思维导图。
+
 ## 线性
 
 ## 树
@@ -27,6 +37,8 @@
 - 层次概念树
 - 元素的类型
 - 元素的边的类型
+- 元素的优先级
+- 连续与离散元素集合
 
 ## 笔记的展开
 
