--- a/GrowthK2S/思海/综述文件.md
+++ b/GrowthK2S/思海/综述文件.md
@@ -2,6 +2,8 @@
 
 笔记＝复用➕快速索引，目标是内化，根本目的是借假修真。
 
+知识是内在的，而笔记是内在知识的外在表示。
+
 修炼自己，让自己不借助外物（计算机）也能迅速做到和借助外物（计算机）完成一样的事情（类比手法），即训练自己的身心智慧。总结就是以人为本，借假修真，最后弃假归真。
 
 ## GrowthK2S：树图知识结构空间
