--- a/GrowthK2S/思海/网状思考&层级语言.md
+++ b/GrowthK2S/思海/网状思考&层级语言.md
@@ -1,8 +1,6 @@
 史蒂芬平克在《风格感觉》一书中提到：「写作之难，在于把网状的思考，用树状的语法结构，转换成线性字符串。」
 
-【知识树】的作用
-
-
+## 【知识树】的作用
 
 知识树的本质是承接外来知识的接口
 人类的思考是网状结构，但人类的语法结构决定了，绝大多数输出行为都是树状逻辑，而我们的材料也是如此
@@ -13,8 +11,7 @@
 
 而想真正构建【自己的知识】，需要的是概念和链接
 
-
-【概念】和【链接】的作用
+## 【概念】和【链接】的作用
 人的思考是一个网状过程，知识之间的关系也是如此
 
 但是，人类语言结构是树状结构，文章也常常遵循树状结构或者线性结构
@@ -31,7 +28,7 @@
 
 
 
-我对【知识树】【概念】【链接】的理解
+## 我对【知识树】【概念】【链接】的理解
 
 
 我做一个比喻：
@@ -94,7 +91,7 @@ ps：这个【TODO】法是从叶佬那里学的，很好用
 
 
 
-【概念】与【链接】的使用
+## 【概念】与【链接】的使用
 
 对于【概念】的用法，我之前一直把它当做一个标签，
 所以我创建的【概念】都像【english】【computer】【retrieval of information 】这样，大而笼统
