--- a/GrowthK2S/施工中.md
+++ b/GrowthK2S/施工中.md
@@ -29,9 +29,7 @@ ok, 文内上下文的最佳实践方式是双链。
 
 <!-- 总的来说，是对页面在点集中相对位置类型和关系的描述，适当弃用关系对的描述，选择通过反链查看关联-->
 
-输入和输出两者不可缺其一
-
-筛选器：GitHub的筛选器就蛮有意思的。
+输入和输出两者不可缺其一。
 
 我希望对文件内容进行限定，关于相似的元素类别是否应该写进文件中，还是独立与文件？感觉可以像SuperMemo的wiki一样，一个文件只做一件事，限定一类内容或者说明一个主题，（怎么限定看作者，正如封装一样），差异太大可以创建新的文件
 
