--- a/GrowthK2S/示例/1.2a 感觉.md
+++ b/GrowthK2S/示例/1.2a 感觉.md
@@ -1,4 +1,4 @@
-#! (ink pub (attr (type Topic)) (edge (supset [[心理学]]) (unto [[认知科学]])))
+#! (ink pub (attr (type Topic)) (edge (supset [[心理学]]) (unto [[1.2 认知科学]])))
 
 # 感觉
 
