--- a/GrowthK2S/思海/如何把所学知识内化为自己的.md
+++ b/GrowthK2S/思海/如何把所学知识内化为自己的.md
@@ -1,3 +1,5 @@
+> 知行合一，感觉到了的东西并不能立刻理解它只有理解了的东西才能更深刻地感觉它。
+
 想一想以下这些情况：  
   
 **场景1:**  
@@ -25,7 +27,7 @@
   
 用一句话来总结就是：**_你没有把所学知识内化为自己的！_**
 
-![](https://pic1.zhimg.com/v2-118ec890ca91592b7e1373c8da4a07bc_b.jpg)
+![[Pasted image 20240207112545.jpg]]
 
 找到了根本原因，请你再把注意力放在“内化”这个词上。那什么是内化呢？  
   
@@ -37,7 +39,7 @@
   
 听一些课程，看一些知识类的视频，你会发现这个人很牛掰啊。比如说樊登，他说的每一句话都很在理，都能引起你的共鸣。为什么？就是因为他已经把所学的所有知识都内化为自己的，知识与他这个人已融合为一体了。
 
-![](https://pic2.zhimg.com/v2-1d2897f9ec32cffd0ffc3b05edb9fbf1_b.jpeg)
+![[Pasted image 20240207112556.jpg]]
 
 说到这里，可能还有人会说，我干嘛要费那么大功夫去学知识呢？我要学的东西太多了，如果每一种知识都要经过这个内化的过程，岂不是很浪费时间？  
   
@@ -47,7 +49,7 @@
   
 还有一点请注意，学校教育所传授的知识只是保底知识，当你真正踏入社会开始独立生活时，你会发现那些为了考高分而拼命学会的知识是不够用的，也有的知识可能是早已淘汰很多年的。**_你不可能永远生活在学校里，更不可能永远有老师在后面赶着你往前走，你要立足生存，就必须建立不断更新知识的意识，培养真正把所学知识内化为自己的从而帮助你解决实际问题的能力。这很重要，也很现实！_**
 
-![](https://pic3.zhimg.com/v2-7f226a307052279cfaac8e3f88e39cc2_b.jpg)
+![[Pasted image 20240207112608.jpg]]
 
 那，如何要把所学知识内化为自己的呢？  
   
@@ -111,8 +113,8 @@
   
 输出的方式有很多，比如直播、书写、口头表达、发朋友圈等，首先选择你最想用的方式，把你最想表达的内容尽情表达出来。当你在琢磨如何才能把知识表达出来，别人听了看了能理解、明白、产生共鸣时，就是对知识的深入内化过程。你的语言是不是接地气很关键，反映了你的落地实操能力。
 
-![](https://pic4.zhimg.com/v2-e0a111c075fc55f8557d763c0ba9a393_b.jpg)
 
+![[Pasted image 20240207112619.jpg]]
   
 
 **如何促进知识的内化**  
