--- a/GrowthK2S/示例/元素集/1 现代科学.md
+++ b/GrowthK2S/示例/元素集/1 现代科学.md
@@ -1,4 +1,4 @@
-#! (ink pub (attr (type Topic)) (edge (subset [[形式科学]] [[自然科学]] [[社会科学]])))
+#! (ink pub (attr (type Topic)) (edge (subset 形式科学 自然科学 社会科学)))
 
 # 线代科学
 
