--- a/GrowthK2S/孵化器/000点-创造.md
+++ b/GrowthK2S/孵化器/000点-创造.md
@@ -50,7 +50,7 @@
 
 边是有方向的，且为单向声明，根据语义可以分成，由当前文件指向被引用文件、由引用文件指向当前文件。
 
-~边关系：{{归于-层集-约束}-{引用-时序-同义+别名}}、{抽象-实现，组合-分解}、{相仅：相似+相反}
+~边关系：{{归于-层集-约束}-{引用-时序-同义+别名}}、{抽象-实现，组合-分解}、{相关：近似+相反}
 
 ~元素类：{集合、概念、主题}、实例、列表、任务、术语
 
