--- a/GrowthK2S/思海/手动更新结构检索系列想法.md
+++ b/GrowthK2S/思海/手动更新结构检索系列想法.md
@@ -13,3 +13,10 @@
 	- 你去看那些顶级的事务，时间，知识管理的方法，都是有一个有序的体系去管理的
 	- 我看到的很多他们都是用不同的方法，也没有互相借鉴，但是背后的思维都有相关性和相似性
 - 我的结构已经变过很多次了，都根据你的当前生活和思维习惯去调整的
+- 推荐书目和工具
+  - 活用一辈子的笔记术
+  - 如何有效阅读一本书
+  - GTD
+    - 对我影响最大的是GTD
+    - 这个是个人事务管理方法
+    - 最复杂，但是是最基本，最核心的。其他的一些事务管理方法虽然简化，但是我觉得就相当于走捷径。无异于长远的坚持成长
