--- a/GrowthK2S/思海/手动更新结构检索系列想法.md
+++ b/GrowthK2S/思海/手动更新结构检索系列想法.md
@@ -3,9 +3,9 @@
 - **深度知识笔记、临时收集笔记（zk的闪念笔记和永久笔记）**
 	- 深度知识是你自己写的东西，或者非常经典的知识
 	- 不要随便把这个可以网上找到的都放到OB几年
-- 一个笔记，如果你不能在你有限的时间内找到你想要的东西，长久之后，你根本就不会用这个笔记了。这个笔记也只是你的一个垃圾场。
+- **一个笔记，如果你不能在你有限的时间内找到你想要的东西，长久之后，你根本就不会用这个笔记了。这个笔记也只是你的一个垃圾场。**
 	- 我说的找到，不是纯粹靠搜索出来的。如果你只靠搜索来找笔记，那说明你需要深度思考你的结构。这个深度思考包括了你对自己的生活习惯，思维方式的考量，针对这个来改变你的目录结构
-	- 你可以借鉴一些比较好的方法再结合你自己的情况去组织。而且你的结构应该根据你的生活变化而可以进行调整改变的。。
+	- 你可以借鉴一些比较好的方法再结合你自己的情况去组织。而且**你的结构应该根据你的生活变化而可以进行调整改变的**。。
 - 你要先学习方法，再去找工具，提炼自己的思维，再去精进你的方法，落实到你的工具中
 - 我这两年看过的各类好书，提供的方法，其实背后的思维有很强的关联性和相似性。哪怕我这两周看到的卡片盒方法
 - 我的结构可以随时变，但是目的是我要找的资料需要30秒内可以找到除非没有。而且不是靠暴力搜索去找的
