--- a/GrowthK2S/孵化器/002ID.md
+++ b/GrowthK2S/孵化器/002ID.md
@@ -12,6 +12,7 @@
 4. 同一位置分支，由字母或数字表示。
 5. 节点之间根据编码确定的关系 和 节点的内容的概念层级，他俩是没有关系的。
 6. 卡片编码更多是表示虚拟物理地址，是位置关联和接近性。
+7. 可以有小括号(num)
 
 ```
 1 -> 1a -> 1a1
