--- a/GrowthK2S/孵化器/061笔记的数据结构.md
+++ b/GrowthK2S/孵化器/061笔记的数据结构.md
@@ -27,12 +27,35 @@
 	- 为树赋予概念层级或分类
 - 实践论，无限发散的想法生成树
 	- 按照想法的发展生成树，先有idea后有结构。
+	- 你宁可创建更多的重新表述笔记和反思笔记 (而不是摘录笔记)
 - 事先事后
 	- 事先分类，一成不变的限定分类
 		- 这是中方式是结果而非过程，可以说是得到最后结果才用的。
 	- 随时调整
 		- 手动更新结构，可以随时变，根据你的当前生活和思维习惯去调整。
 	- 事后分类
+
+https://assets.niklas-luhmann-archiv.de/branchview
+
+- 笔记A：交流的一个最基本的前提是，合作伙伴可以互相惊喜。只有这样，信息才能在各自的对方中产生。信息是系统内部的事件。当人们将一条消息或条目与其他可能性进行比较时，就会产生这种结果。因此，信息只产生于具有比较图式的系统，即使这种比较图式只等于“这个或别的什么”。
+- 笔记B：信息论研究信息的传递、加工、提取和利用。
+- 应该把我们刚刚创建的笔记卡A，放在哪里呢？它可以归到信息分支，也可以归到通信分支。这句话的主要思想是围绕信息展开的。检索维基百科学科页面，输入术语查询。产生笔记B。
+- **现在你面前有两张牌。一个上面写着引文，另一个是信息论**。我们应该把这些卡片放在哪里？通过查阅维基百科的学术学科，我们可以看到信息论属于形式科学领域。它特别属于计算机科学的子领域。计算机科学4200：计算机科学是研究计算、自动化和信息的学科。
+- 应该把信息论卡放在计算机科学分支中。为什么? 因为根据维基百科的学科大纲，信息论属于计算机科学。那么，让我们任意选择 4212 作为信息论。
+- 长引言的卡片可以放在哪里？在 Antinet 中，**游戏的名称是相似性**。当决定在哪里安装卡片时，你必须问: **这张卡片最类似于什么?** 好，我们面前的这张牌和什么最相似?这很简单。它与信息论卡片最相似。事实上，它甚至属于信息论分支。在卡片的右上角写上 4212/1。
+
+
+对于一张卡片的存放位置：
+- 相似性
+- 根据现有体系确定元素所在树结构中的位置
+	- 超集卡片不存在时要创建。
+
+逻辑关联而不是字面关联
+- 除了索引卡，文献卡、卡片与卡片之间几乎都是通过逻辑关联起来的
+- 这些关联的卡片形成一条逻辑链路（思考的链路），链路可以有分支。
+	- 需要去思考卡片和卡片之间的一个背后的逻辑关系。
+	- 他一定要有他们之间的一个内在逻辑，这样才能够让这个卡片系统能够有机生长。
+- 单纯靠关键词建立的连接，缺乏思考，没有办法有机生长
 
 
 #### 关于叶子和节点
