--- a/GrowthK2S/孵化器/061笔记的数据结构.md
+++ b/GrowthK2S/孵化器/061笔记的数据结构.md
@@ -20,7 +20,9 @@
 - 星系
 - 行政地图
 - 元素结构树（文件组织结构树）
-- 在 Git 中，历史记录是一个由快照组成的有向无环图。
+- Git历史记录是一个由快照组成的有向无环图。
+- 分类树
+- 决策树
 
 ### 不同用法
 - 自上而下，有限收敛的集合框架树
@@ -28,7 +30,7 @@
 - 实践论，无限发散的想法生成树
 	- 按照想法的发展生成树，先有idea后有结构。
 	- 你宁可创建更多的重新表述笔记和反思笔记 (而不是摘录笔记)
-- 事先事后
+- 按策略分为
 	- 事先分类，一成不变的限定分类
 		- 这是中方式是结果而非过程，可以说是得到最后结果才用的。
 	- 随时调整
