--- a/GrowthK2S/孵化器/058树图.md
+++ b/GrowthK2S/孵化器/058树图.md
@@ -39,3 +39,28 @@
 2. 线性表没有数据元素称为空表，树中可以没有结点，叫做空树。在图结构中，不允许没有顶点，顶点集合的V的有穷非空。
 3. 线性表中，相邻的数据元素之间具有线性关系，树结构中，相邻两层的结点具有层次关系，而图中，任意两个顶点之间都可能有关系，顶点之间的逻辑关系用边来表示，边集可以是空的。
 
+无向边：若顶点vi到vj之间的边没有方向，则称这条边为无向边（Edge），用无序偶对(vi, vj) 来表示。如果图中任意两个顶点至极爱你的边都是无向边，则称该图为无向图（Undirected graphs）
+
+G1 = (V1,{E1})，其中顶点集合V1 = {A, B, C, D}；边集合E1 = { (A, B), (B, C), (C, D), (D, A), (A, C) }
+
+有向边：若顶点vi 到 vj的边有方向，则称这条边为有向边，也称为弧（Arc）。用有序偶<vi, vj>来表示，vi称为弧尾（Tail），vj称为弧头（Head）。如果图中任意两个顶点之间的边都是有向边，则称该图为有向图（Directed graphs）。
+
+G2 = (V2,{E2})，其中顶点集合 V2 = {A, B, C, D}；弧集合E2 = {<A,D>, <B,A>, <C,A>, <B,C>}
+
+在图中，若不存在顶点到其自身的边，且同一条边不重复出现，则称这样的图为简单图。
+
+在无向图中，若任意两个顶点之间豆豆存在边，则称该图为无向完全图。含有n个顶点的无向完全图有 n(n-1) / 2 条边。
+
+在有向图中，如果任意两个顶点之间都存在方向互为相反的两条弧，则称该图为有向完全图。含有n个顶点的有向完全图有 n*(n-1) 条边。
+
+有很少条边或弧的图称为稀疏图，反之称为稠密图。这里稀疏和稠密的模糊的概念是相对而言的。
+
+有些图的边或弧具有与它相关的数字，这种与图的边或弧相关的数叫做权（Weight）。这些权可以表示从一个顶点到另一个顶点的距离或耗费。这种带权的图通常称为网（network）。
+
+假设有两个图 G = (V,{E}) 和 G' = (V',{E'})，如果V‘ ⊆ V 且 E’ ⊆ E，则称 G‘ 为G 的子图（Subgraph）。
+
+对于无向图 G = (V,{E}) ，如果边 (v, v’) ∈ E，则称顶点v和v'互为邻接点（Adjacent），即v和v‘相邻接。边 (v, v’) 依附（incident）于顶点 v 和v’，或者说(v, v’)与顶点 v 和v’ 相关联。顶点 v 的度（Degree）是和v相关联的边的数目，记为TD(v)。
+
+对于有向图 G = (V,{E})，如果弧 <v,v'> ∈ E，则称顶点v邻接到顶点 v‘，顶点v'的邻接自顶点 v。弧<v,v'>和顶点 v，v’相关联。以顶点v为头的弧的数目称为v的入度（InDegree），记为ID(v)；以v为尾的弧的数目称为v的出度（OutDegree），记为OD(v)；顶点v的度为TD(v) = ID(v) + OD(v)
+
+无向图 G = (V,{E}) 中从顶点 v 到顶点 v‘ 的路径（Path）是一个顶点序列。路径的长度的路径上的边或弧的数目。
