--- a/GrowthK2S/孵化器/058树图.md
+++ b/GrowthK2S/孵化器/058树图.md
@@ -64,3 +64,6 @@ G2 = (V2,{E2})，其中顶点集合 V2 = {A, B, C, D}；弧集合E2 = {<A,D>, <B
 对于有向图 G = (V,{E})，如果弧 <v,v'> ∈ E，则称顶点v邻接到顶点 v‘，顶点v'的邻接自顶点 v。弧<v,v'>和顶点 v，v’相关联。以顶点v为头的弧的数目称为v的入度（InDegree），记为ID(v)；以v为尾的弧的数目称为v的出度（OutDegree），记为OD(v)；顶点v的度为TD(v) = ID(v) + OD(v)
 
 无向图 G = (V,{E}) 中从顶点 v 到顶点 v‘ 的路径（Path）是一个顶点序列。路径的长度的路径上的边或弧的数目。
+
+
+回路或环（Cycle）、连通图（Connected Graph）、生成树、有向树、生成森林。
