--- a/GrowthK2S/孵化器/061笔记的数据结构.md
+++ b/GrowthK2S/孵化器/061笔记的数据结构.md
@@ -6,6 +6,8 @@
 
 当线性有了层级一定会变成树，例如epub的toc。原本线性的文章，按照层次排列就变成了目录树。
 
+例如序列，每一个元素都线性排列。一个元素要么是自己，要么异于自己，要么在自己里面。既然在自己里面就有了层级，有了层级，若加上根结点，就变成了树结构。
+
 ## 线性
 
 ## 树
