--- a/GrowthK2S/孵化器/061笔记的数据结构.md
+++ b/GrowthK2S/孵化器/061笔记的数据结构.md
@@ -59,21 +59,39 @@ https://assets.niklas-luhmann-archiv.de/branchview
 - 应该把信息论卡放在计算机科学分支中。为什么? 因为根据维基百科的学科大纲，信息论属于计算机科学。那么，让我们任意选择 4212 作为信息论。
 - 长引言的卡片可以放在哪里？在 Antinet 中，**游戏的名称是相似性**。当决定在哪里安装卡片时，你必须问: **这张卡片最类似于什么?** 好，我们面前的这张牌和什么最相似?这很简单。它与信息论卡片最相似。事实上，它甚至属于信息论分支。在卡片的右上角写上 4212/1。
 
+### 树的生长
 
-### 添加笔记（树结构）
-
-- 新建
+- 性质
+  - 分支：异层次增加（深度、有层次）
+    - 扩充笔记
+    - 路径：层次链路
+  - 序列：同层次增加（广度、互异有差别、继续）
+    - 思路的延续
+    - 思维链路序列（链路： 关联的卡片形成一条逻辑链路（思考的链路））
+    - 重载：增加自身变体（多态）
+      - 改写
+        - （num）改写，1.1a(1)
+        - 创建新序号从新开始
+      - 重载可以理解成多态的具体表现形式。
+      - 重写是父类与子类之间多态性的一种表现，
+  - 片段：新结点的连接
+    - 查找大类，然后从大类到小类？形成链路段然后接到叶子上？
+    - 放在最大相关结点上（可能不是叶子结点）
 	- 对于一张卡片的存放位置：
 		- 相似性
 		- 根据元素内容去检索现有体系
 			- 根据检索结果，确定元素所在树结构中的位置
 			- 超集卡片不存在时要创建。
 	- **新写的位置，取决于你第一时间是因为哪个节点得到了这个新概念。**
-- 链路： 关联的卡片形成一条逻辑链路（思考的链路）
-- 分支
-- 扩展
-- 插入、删除
-	- 固定ID不存在此方法
+- 结点的修改
+  - 保留你的错误或不完美
+  - 不需要合并
+  - 不需要移除结点
+  - 关于结点内容错误过时的修改或合并？
+  - 可以添加订正
+  - 可以修改结点
+
+### 添加笔记（树结构）
 
 已有这样一些卡片：
 
