--- a/GrowthK2S/孵化器/061笔记的数据结构.md
+++ b/GrowthK2S/孵化器/061笔记的数据结构.md
@@ -3,6 +3,8 @@
 > 元素内容树、元素结构树：用好笔记软件在实用意义上就是用好树图结构（笔记知识）
 > 
 > ==集合的元素，元素的集合。==
+>
+> 整体无序，局部有序。Knowledge replication
 
 当线性有了层级一定会变成树，例如epub的toc。原本线性的文章，按照层次排列就变成了目录树。
 
