更新 061笔记的数据结构.md

--- a/GrowthK2S/孵化器/061笔记的数据结构.md
+++ b/GrowthK2S/孵化器/061笔记的数据结构.md
@@ -65,10 +65,11 @@ https://assets.niklas-luhmann-archiv.de/branchview
 ### 树的生长
 
 - 性质
-  - 分支：异层次增加（深度、有层次）
+  - 分支：路径递增（深度）
     - 扩充笔记
     - 路径：层次链路
-  - 序列：同层次增加（广度、互异有差别、继续）
+    - 层次？
+  - 序列：序列递增（广度、互异有差别、继续）
     - 思路的延续
     - 思维链路序列（链路： 关联的卡片形成一条逻辑链路（思考的链路））
     - 重载：增加自身变体（多态）
