--- a/GrowthK2S/孵化器/061笔记的数据结构.md
+++ b/GrowthK2S/孵化器/061笔记的数据结构.md
@@ -21,8 +21,7 @@
 ZK树的高度，若用文件名，最大为205。留出25位作为文件名和后缀。可用共计180位。
 卢曼笔记最高不超过20位。
 ### 表现形式
-- 缩进列表
-- 大纲
+- 缩进列表（word大纲，目录）
 - wiki_tag树
 - treesheets
 - 思维导图（基于树结构，可以包含交叉连接和反馈循环）
