--- a/GrowthK2S/孵化器/061笔记的数据结构.md
+++ b/GrowthK2S/孵化器/061笔记的数据结构.md
@@ -10,13 +10,17 @@
 
 例如序列，每一个元素都线性排列。一个元素要么是自己，要么异于自己，要么在自己里面。既然在自己里面就有了层级，有了层级，若加上根结点，就变成了树结构。
 
-## 线性
+## 点
 
-列表，文字串
+文件，条目，项目
 
-## 多维表
+## 线
 
-二维关系表
+线性：列表，文字串
+
+## 表
+
+二维关系表（多维表）
 
 ## 树
 
