更新 061笔记的数据结构.md

--- a/GrowthK2S/孵化器/061笔记的数据结构.md
+++ b/GrowthK2S/孵化器/061笔记的数据结构.md
@@ -10,17 +10,15 @@
 
 例如序列，每一个元素都线性排列。一个元素要么是自己，要么异于自己，要么在自己里面。既然在自己里面就有了层级，有了层级，若加上根结点，就变成了树结构。
 
-## 点
-
-文件，条目，项目
+点(基本单位)：文件，条目，项目
 
 ## 线
 
-线性：列表，文字串
+线性：清单，无缩进列表，文字串，有顺序的任何东西
 
 ## 表
 
-二维关系表（多维表）
+二维关系表
 
 ## 树
 
