--- a/GrowthK2S/示例/元素集/1.1 数学.md
+++ b/GrowthK2S/示例/元素集/1.1 数学.md
@@ -10,14 +10,16 @@
 
 ## 数学名词
 
-定义
-公理
-定理  相当复杂的推理（推理，基本作用）
-推论  
-引理  中间产物 相当复杂
-猜想  证明证伪 不可被证
-命题 
-悖论  
+- 定义
+- 性质
+- 判定
+- 公理
+- 定理  相当复杂的推理（推理，基本作用）
+- 推论  
+- 引理  中间产物 相当复杂
+- 猜想  证明证伪 不可被证
+- 命题 
+- 悖论  
 
 
 在数学中，"性质"通常指的是一个数学对象或者一种数学结构所具有的特征或者属性。例如，一个函数的性质可能包括它的奇偶性、单调性、最大值和最小值等等。而"定理"则是对某一类数学对象或者数学结构所具有的性质进行严格的证明和描述。换句话说，定理是通过严格的证明得出的结论，具有普遍的适用性和可靠性。性质和定理都是数学中重要的概念，它们帮助我们更好地理解和描述数学对象和结构。[思考]
@@ -85,7 +87,7 @@
 ### 5、定律
 定律是为实践和事实所证明，反映事物在一定条件下发展变化的客观规律的论断，是通过大量具体的客观事实经验累积归纳而成的结论。例如牛顿运动定律、能量守恒定律、欧姆定律等。
 
-定律是一种理论模型，它用以描述特定情况、特定尺度下的现实世界，在其它尺度下可能会失效或者不准确。没有任何一种理论可以描述宇宙当中的所有情况，也没有任何一种理论可能完全正确。
+**定律是一种理论模型**，它用以描述特定情况、特定尺度下的现实世界，在其它尺度下可能会失效或者不准确。没有任何一种理论可以描述宇宙当中的所有情况，也没有任何一种理论可能完全正确。
 
 简而言之，定律是人们通过猜想验证、通过无数次实践证明的，以特殊推导一般，以局部推导全局的的论断。很多科学与哲学的发展即基于此。
 
