--- a/GrowthK2S/孵化器/062笔记的逻辑结构.md
+++ b/GrowthK2S/孵化器/062笔记的逻辑结构.md
@@ -1,5 +1,13 @@
 贡献者-大脸猫皮皮：我个人觉得这些不适合我，我更关注于笔记的逻辑结构而不是物理结构，关注非结构化笔记而不是结构化笔记。这点可以参看关系型数据库和非关系型数据库之争。
 
-关于逻辑结构，主要是什么，反正不是【线表树图】
+你关注的关系不仅在计算机科学里有，在工商管理领域也有，包括 kg 笔记法采用的四种笔记关系
+
+不过没多少人拿出来说，当时 R 佬叫看一本书，我才反应过来
+
+在计算机科学里可以向上延伸到离散数学领域，研究离散事物的关系，R 佬的 kg 笔记法就是提炼自【《信息组织》第四版 主编 周宁】这本书里的关系。
+
+---
+
+关于逻辑结构，主要是什么，反正不是【线表树图】，很可能是逻辑学的知识。
 
 有个 关系型数据库和非关系型数据库之争 可以参考。
