--- a/GrowthK2S/孵化器/061笔记的物理结构.md
+++ b/GrowthK2S/孵化器/061笔记的物理结构.md
@@ -32,28 +32,31 @@ ZK 树的高度，若用文件名，最大为 205。留出 25 位作为文件名
 ### 表现形式
 
 - 缩进列表（word 大纲，目录）
+  - 文件内的内容标题大纲树
 - wiki_tag 树
 - treesheets
-- 思维导图（基于树结构，可以包含交叉连接和反馈循环）
-- ZK2 的编码想法生成树（序列分支树）
-- 元素内容树（文件中内容的组织树）
-- 表格嵌套
-- 星系
-- 行政地图
-- 元素结构树（文件组织结构树）
-- Git 历史记录是一个由快照组成的有向无环图。
-- 分类树
+- 多文件树（多文件树（无文件夹），文件系统树（有文件夹））
+  - 块级列表树，卡片级列表树
+- sm 内容树、神经树。
+- DOM 文档树
 - Decision tree/Logic tree(决策树/逻辑树)
   - 条件推理树
   - 数学的分步乘法原理
+- 任务目标和问题拆分树
+  - 比如论文的一个大问题的拆分为各个子问题。
+- 思维导图（基于树结构，可以包含交叉连接和反馈循环）
+- ZK2 的编码想法生成树（序列分支树）
+- 表格嵌套
+- 星系
+- 行政地图
+- 分类树
 - 赫夫曼树
 - 幕布子节点
-- sm 内容树、神经树。
-- ob 文本式双链、ob 关系图谱（应该不是树结构）
 - 英语的语法框架（英语句子=主干+修饰成分）
 - 生物分类学
-- DOM 文档树
-- 块级列表树，卡片级列表树
+- 类似树的形式
+  - ob 文本式双链、ob 关系图谱（应该不是树结构）
+  - Git 历史记录是一个由快照组成的有向无环图。
 
 ### 不同用法
 
