--- a/GrowthK2S/孵化器/061笔记的物理结构.md
+++ b/GrowthK2S/孵化器/061笔记的物理结构.md
@@ -44,6 +44,8 @@ ZK 树的高度，若用文件名，最大为 205。留出 25 位作为文件名
   - 数学的分步乘法原理
 - 任务目标和问题拆分树
   - 比如论文的一个大问题的拆分为各个子问题。
+- AST抽象语法树
+  - 实用主义，线性语言表达的树状重要性结构
 - 路线图
 - 思维导图（基于树结构，可以包含交叉连接和反馈循环）
 - ZK2 的编码想法生成树（序列分支树）
