up add 孤立点，线性，关系表，树，图，语义网，超图

--- a/GrowthK2S/孵化器/061笔记的拓扑结构.md
+++ b/GrowthK2S/孵化器/061笔记的拓扑结构.md
@@ -1,4 +1,7 @@
-# 笔记的物理结构
+知识组织的拓扑结构：==孤立点，线性，关系表，树，图，语义网，超图==。描述从简单的孤立笔记结构逐渐发展为最复杂的超图笔记结构的过程。
+
+# 知识组织的拓扑结构
+
 
 问题：由多个笔记组成的无序集合，如何组织他们。通过某几种抽象的结构。使看起来有条理，有组织。但不完全整齐。
 
