--- a/GrowthK2S/孵化器/061笔记的拓扑结构.md
+++ b/GrowthK2S/孵化器/061笔记的拓扑结构.md
@@ -38,9 +38,10 @@ ZK 树的高度，若用文件名，最大为 205。留出 25 位作为文件名
   - 文件内的内容标题大纲树
 - wiki_tag 树
 - treesheets
-- 文件树（无文件夹，有文件夹）
+- 文件树（无文件夹文件树，有文件夹目录树）
   - 块级列表树，卡片级列表树
   - sm 内容树
+  - 有文件夹的目录树感觉就像用格子组成的树，格子里面放文件或子文件夹
 - sm神经树。
 - DOM 文档树
 - Decision tree/Logic tree(决策树/逻辑树)
