--- a/GrowthK2S/孵化器/061笔记的拓扑结构.md
+++ b/GrowthK2S/孵化器/061笔记的拓扑结构.md
@@ -41,6 +41,7 @@ ZK 树的高度，若用文件名，最大为 205。留出 25 位作为文件名
   - 块级列表树，卡片级列表树
   - SuperMemo 内容树
   - 有文件夹的目录树感觉就像用容器组成的树，格子里面放文件或子文件夹
+  - 目录树的组成为文件夹和文件两类
 - ZK2 的编码想法生成树（序列分支树）
 - 分类树
   - 生物分类学
