--- a/KOS/孵化器/061笔记的拓扑结构.md
+++ b/KOS/孵化器/061笔记的拓扑结构.md
@@ -2,7 +2,6 @@
 
 # 知识组织的拓扑结构
 
-
 问题：由多个笔记组成的无序集合，如何组织他们。通过某几种抽象的结构。使看起来有条理，有组织。但不完全整齐。
 
 > 单元素内容树、多元素结构树：用好笔记软件在实用意义上就是用好树图结构（笔记知识）
@@ -30,7 +29,9 @@
 树的结构、树的生成顺序。层次化的树结构。
 
 ZK 树的高度，若用文件名，最大为 205。留出 25 位作为文件名和后缀。可用共计 180 位。
-卢曼笔记最高不超过 20 位。思源文档树可选限制为7层。
+卢曼笔记最高不超过 20 位。思源文档树可选限制为 7 层。
+
+- 在树中无论深度还是广度，都可以表达层次。不过深度表达层次在数量多时表现更好，广度在数量少时表现更好。
 
 ### 表现形式
 
@@ -45,14 +46,18 @@ ZK 树的高度，若用文件名，最大为 205。留出 25 位作为文件名
 - ZK2 的编码想法生成树（序列分支树）
 - 分类树
   - 生物分类学
+- 模块树（Package）
+  - 模块分层，不仅可以在模块树的深度实现，也可以在广度实现。
+  - 叶节点（底层）最基础、最通用的功能模块。根结点（顶层）通常是用户直接交互的部分。
+  - 在模块树的设计中，通常会从底层开始构建，逐步向上封装，直到顶层。每一层的模块都应该只依赖于它的直接下层，而不应该跨层依赖。这样做的好处是，你可以更容易地替换和更新某一层，而不会影响到其他层。
 - DOM 文档树
-- SuperMemo神经树。
+- SuperMemo 神经树。
 - Decision tree/Logic tree(决策树/逻辑树)
   - 条件推理树
   - 数学的分步乘法原理
 - 任务目标和问题拆分树
   - 比如论文的一个大问题的拆分为各个子问题。
-- AST抽象语法树
+- AST 抽象语法树
   - 实用主义，线性语言表达的树状重要性结构
 - treesheets
 - 路线图
